@@ -249,6 +249,8 @@ Avro 1.8.0 (15 December 2015)
 
     AVRO-1770. Python 3 overwrites custom README.txt (blue via tomwhite)
 
+    AVRO-1771. Add LICENSE and NOTICE to avro-doc artifact. (blue via tomwhite)
+
 Avro 1.7.7 (23 July 2014)
 
   NEW FEATURES
